# rust-learning

./: .gitignore  Cargo.toml  README.md
.history/docs/: base_20240322100810.md  base_20240322101306.md  base_20240322101406.md  ownership_20240322102004.md  test_20240322103826.md
.history/src/: main_20240322094135.rs  main_20240322094229.rs  main_20240322095240.rs  main_20240322095546.rs  main_20240322095623.rs  main_20240322095635.rs  main_20240322095710.rs  main_20240322100439.rs
.history/src/algorithm/: sorts_20240322095610.rs  sorts_20240322095936.rs  sorts_20240322100221.rs
docs/: annotation.md  base.md  collection.md  control_flow.md  data_type.md  enum.md  function.md  io_format.md  module.md  ownership.md  project_management.md  struct.md  type.md  variable.md
src/: base.rs  main.rs
src/algorithm/: array.rs  mod.rs  sorts.rs
